--- a/Prevu.Synoptics.V2451_Biffa/CH.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/CH.xaml
@@ -16,6 +16,28 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1106,455,0,0" VerticalAlignment="Top" Width="52" StatusComponent="170-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1089,672,0,0" VerticalAlignment="Top" Width="86" StatusComponent="320-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.508,0.522">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform X="-0.876" Y="0.436"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="961,617,0,0" VerticalAlignment="Top" Width="161" StatusComponent="324-01-MA1" PipeHeight="Medium"/>
+        <Machines:Storage_silo HorizontalAlignment="Left" Margin="1068,479,0,0" VerticalAlignment="Top" Height="186" Width="128"/>
         <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="60,90,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="100" Width="98">
             <Machines:MaterialInletOutlet.RenderTransform>
                 <TransformGroup>
@@ -90,8 +112,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="470,265,0,0" VerticalAlignment="Top" Width="129" StatusComponent="022-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="557,298,0,0" VerticalAlignment="Top" Width="76" StatusComponent="022-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="490,221,0,0" VerticalAlignment="Top" Width="109" StatusComponent="022-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="535,276,0,0" VerticalAlignment="Top" Width="120" StatusComponent="022-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -185,9 +207,8 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="294,260,0,0" VerticalAlignment="Top" Height="1" Width="192"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="229,284,0,0" 
+            Margin="559,156,0,0" 
             VerticalAlignment="Top" 
             ComponentName="022-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -375,17 +396,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1106,455,0,0" VerticalAlignment="Top" Width="52" StatusComponent="170-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="47" Margin="1158,429,0,0" Stroke="Black" VerticalAlignment="Top" Width="22" Fill="#FFBDBDBD"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1196,428,0,0" 
             VerticalAlignment="Top" 
@@ -401,16 +411,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1173,754,0,0" VerticalAlignment="Top" Width="139" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1089,672,0,0" VerticalAlignment="Top" Width="86" StatusComponent="320-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.508,0.522">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform X="-0.876" Y="0.436"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1193,678,0,0" 
             VerticalAlignment="Top" 
@@ -430,7 +430,6 @@
                 </TransformGroup>
             </Machines:MaterialInletOutlet.RenderTransform>
         </Machines:MaterialInletOutlet>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="961,617,0,0" VerticalAlignment="Top" Width="132" StatusComponent="324-01-MA1" PipeHeight="Medium"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="920,637,0,0" 
             VerticalAlignment="Top" 
@@ -479,9 +478,8 @@
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="692,393,0,0" VerticalAlignment="Top" Height="1" Width="144"/>
-        <Rectangle HorizontalAlignment="Left" Height="161" Margin="1084,480,0,0" Stroke="Black" VerticalAlignment="Top" Width="96" Fill="#FFBDBDBD"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1086,538,0,0" 
+            Margin="1087,523,0,0" 
             VerticalAlignment="Top" 
             ComponentName="320-01-MA1"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="1092,688,0,0" VerticalAlignment="Top"/>
@@ -496,5 +494,8 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
+        <Machines:Manual_selection HorizontalAlignment="Left" Margin="913,354,0,0" VerticalAlignment="Top" Height="79" Width="38"/>
+        <Machines:Buffer_belt HorizontalAlignment="Left" Margin="310,141,0,0" VerticalAlignment="Top" Height="177" Width="197"/>
+        <Machines:Radar HorizontalAlignment="Left" Margin="1152,448,0,0" VerticalAlignment="Top" Loaded="Radar_Loaded" Height="49" Width="30"/>
     </Grid>
 </UserControl>
