--- a/Prevu.Synoptics.V2451_Biffa/WH1.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH1.xaml
@@ -71,8 +71,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="404,166,0,0" VerticalAlignment="Top" Width="198" StatusComponent="420-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="998,233,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="40" StatusComponent="456-01-MA1" PipeHeight="Medium">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="404,265,0,0" VerticalAlignment="Top" Width="198" StatusComponent="420-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="998,332,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="40" StatusComponent="456-01-MA1" PipeHeight="Medium">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -82,10 +82,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="710,246,0,0" VerticalAlignment="Top" Width="250" StatusComponent="455-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="710,345,0,0" VerticalAlignment="Top" Width="250" StatusComponent="455-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="144,151,0,0" VerticalAlignment="Top" Width="164" Color="Water" StatusComponent="450-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="240,199,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="420,469,0,0" VerticalAlignment="Top" Width="500" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="450-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="457,531,0,0" VerticalAlignment="Top" Width="426" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="450-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,7 +119,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="904,183,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
+        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="904,282,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="328,703,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -151,8 +151,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="282,69,0,0" VerticalAlignment="Top" Height="254" Width="142"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="580,95,0,0" VerticalAlignment="Top" Height="204" Width="150" RenderTransformOrigin="0.5,0.5">
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="580,194,0,0" VerticalAlignment="Top" Height="204" Width="150" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -168,11 +167,7 @@
                       JumpFromLabel="420-01-MA1" 
                       JumpToLabel="322-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="308,28,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="420-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="976,137,0,0" 
+            Margin="976,236,0,0" 
             VerticalAlignment="Top" 
             ComponentName="456-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -197,7 +192,7 @@
             </Labels:DeviceLabel.RenderTransform>
         </Labels:DeviceLabel>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="563,89,0,0" 
+            Margin="563,188,0,0" 
             VerticalAlignment="Top" 
             ComponentName="455-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -210,9 +205,9 @@
             VerticalAlignment="Top" 
             JumpFromLabel="450-41-LT1" 
             JumpToLabel="470-23-CV2" RenderTransformOrigin="-0.711,0.53"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1014,248,0,0" VerticalAlignment="Top" Width="82" StatusComponent="456-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1014,347,0,0" VerticalAlignment="Top" Width="82" StatusComponent="456-01-MA1" PipeHeight="Medium"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1080,227,0,0" 
+            Margin="1080,326,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="456-01-MA1" 
             JumpToLabel="460-01-MA1"/>
@@ -342,5 +337,10 @@
             Margin="398,347,0,0" 
             VerticalAlignment="Top" 
             ComponentName="420-DISCH"/>
+        <Machines:STR_Washing_reactor_A HorizontalAlignment="Left" Margin="280,53,0,0" VerticalAlignment="Top" Height="254" Width="148"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="308,28,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="420-01-MA1"/>
     </Grid>
 </UserControl>
