--- a/Prevu.Synoptics.V2451_Biffa/WH2.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH2.xaml
@@ -8,6 +8,51 @@
              x:Class="Prevu.Synoptics.WH2" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1292,508,0,0" VerticalAlignment="Top" Width="74" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1298,501,0,0" VerticalAlignment="Top" Width="88" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1303,370,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1289,341,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="1264,392,0,0" VerticalAlignment="Top" Height="131" Width="144"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="264,237,0,0" VerticalAlignment="Top" Width="47" Color="Water" StatusComponent="470-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="83,185,0,0" VerticalAlignment="Top" Width="243" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="97,113,0,0" VerticalAlignment="Top" Width="229" StatusComponent="322-01-MA1" PipeHeight="Medium"/>
+        <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" Margin="280,55,0,0" VerticalAlignment="Top" Height="230" Width="121"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="649,678,0,0" VerticalAlignment="Top" Width="102" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -39,27 +84,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="212,540,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.497,0.467" Color="Vapor" StatusComponent="474-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1232,508,0,0" VerticalAlignment="Top" Width="74" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1238,501,0,0" VerticalAlignment="Top" Width="88" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="785,255,0,0" VerticalAlignment="Top" Color="Water" Width="198" RenderTransformOrigin="0.5,0.5" StatusComponent="470-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="849,319,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="470-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -102,7 +127,7 @@
         </Labels:Pipe>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="825,519,0,0" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="665,783,0,0" VerticalAlignment="Top" Width="196" Color="Water" StatusComponent="470-02-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="693,118,0,0" VerticalAlignment="Top" Width="207" StatusComponent="460-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="693,247,0,0" VerticalAlignment="Top" Width="207" StatusComponent="460-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,9 +137,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="953,195,0,0" VerticalAlignment="Top" Width="158" StatusComponent="463-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="264,237,0,0" VerticalAlignment="Top" Width="47" Color="Water" StatusComponent="470-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="83,185,0,0" VerticalAlignment="Top" Width="243" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="964,318,0,0" VerticalAlignment="Top" Width="59" StatusComponent="463-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="459,548,0,0" VerticalAlignment="Top" Width="394" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="470-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -125,7 +148,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="97,113,0,0" VerticalAlignment="Top" Width="229" StatusComponent="322-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="497,661,0,0" VerticalAlignment="Top" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -179,8 +201,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="282,69,0,0" VerticalAlignment="Top" Height="235" Width="142"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="827,44,0,0" VerticalAlignment="Top" Height="204" Width="150" RenderTransformOrigin="0.5,0.5">
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="827,169,0,0" VerticalAlignment="Top" Height="204" Width="150" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -196,7 +217,7 @@
           JumpFromLabel="460-01-MA1" 
           JumpToLabel="456-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-          Margin="308,28,0,0" 
+          Margin="296,28,0,0" 
           VerticalAlignment="Top" 
           ComponentName="460-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -225,7 +246,7 @@
           VerticalAlignment="Top" 
           ComponentName="470-01-MA1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-          Margin="1080,175,0,0" 
+          Margin="1020,298,0,0" 
           VerticalAlignment="Top" 
           JumpFromLabel="463-01-MA1" 
           JumpToLabel="478-01-MA1"/>
@@ -303,23 +324,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:Waste HorizontalAlignment="Left" Margin="957,559,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="380,69,0,0" VerticalAlignment="Top" Height="235" Width="142"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="478,68,0,0" VerticalAlignment="Top" Height="236" Width="142"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="576,69,0,0" VerticalAlignment="Top" Height="235" Width="142"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="406,28,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="460-02-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="504,28,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="460-03-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="602,28,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="460-04-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="839,28,0,0" 
+            Margin="839,157,0,0" 
             VerticalAlignment="Top" 
             ComponentName="463-01-MA1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
@@ -328,8 +334,8 @@
             JumpFromLabel="470-23-CV2" 
             JumpToLabel="450-41-LT1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="654,352,0,0" VerticalAlignment="Top" Color="Water" Width="232" StatusComponent="470-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1185,288,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="1176,256,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1245,288,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="1236,256,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -340,11 +346,11 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1080,266,0,0" 
+            Margin="1140,266,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1184,348,0,0" VerticalAlignment="Top" Width="85" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="1175,316,0,0" VerticalAlignment="Top" Height="71" Width="53" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1244,348,0,0" VerticalAlignment="Top" Width="85" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="1235,316,0,0" VerticalAlignment="Top" Height="71" Width="53" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -355,10 +361,10 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1080,326,0,0" 
+            Margin="1140,326,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-21-CV2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1243,370,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1298,341,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3" Loaded="Pipe_Loaded">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -368,27 +374,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1229,341,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1246,333,0,0" VerticalAlignment="Top" Color="Water" Width="124" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1258,203,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1318,203,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -399,10 +385,9 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1263,175,0,0" 
+            Margin="1323,175,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-21-CV3"/>
-        <Rectangle HorizontalAlignment="Left" Height="100" Margin="1223,392,0,0" Stroke="Black" VerticalAlignment="Top" Width="106" Fill="#FFBDBDBD" RenderTransformOrigin="0.495,0.46"/>
         <Rectangle HorizontalAlignment="Left" Height="1" Margin="272,493,0,0" Stroke="Black" VerticalAlignment="Top" Width="37"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="258,486,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Rectangle HorizontalAlignment="Left" Height="1" Margin="264,592,0,0" Stroke="Black" VerticalAlignment="Top" Width="50"/>
@@ -446,7 +431,7 @@
             VerticalAlignment="Top" 
             ComponentName="474-71-ECS2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1080,417,0,0" 
+            Margin="1140,406,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-41-WT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -496,16 +481,31 @@
             </Machines:External.RenderTransform>
         </Machines:External>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1231,417,0,0" 
+            Margin="1140,479,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="308,161,0,0" 
+            Margin="296,161,0,0" 
             VerticalAlignment="Top" 
             ComponentName="460-61-LS1"/>
-        <Rectangle HorizontalAlignment="Left" Height="33" Margin="1259,545,0,0" Stroke="#FFEEFB0A" VerticalAlignment="Top" Width="33" OpacityMask="#FFEEFB0A" Visibility="Visible" StrokeThickness="3" Stretch="Fill"/>
-        <Label Content="A" HorizontalAlignment="Left" Margin="1265,542,0,0" VerticalAlignment="Top" Foreground="#DDFFFFFF" FontWeight="Normal" FontSize="22" Background="Transparent" FontStyle="Normal" Height="32" Width="22"/>
+        <Rectangle HorizontalAlignment="Left" Height="33" Margin="1319,545,0,0" Stroke="#FFEEFB0A" VerticalAlignment="Top" Width="33" OpacityMask="#FFEEFB0A" Visibility="Visible" StrokeThickness="3" Stretch="Fill"/>
+        <Label Content="A" HorizontalAlignment="Left" Margin="1325,542,0,0" VerticalAlignment="Top" Foreground="#DDFFFFFF" FontWeight="Normal" FontSize="22" Background="Transparent" FontStyle="Normal" Height="32" Width="22"/>
         <Rectangle HorizontalAlignment="Left" Height="32" Margin="690,600,0,0" Stroke="#FFEEFB0A" VerticalAlignment="Top" Width="33" OpacityMask="#FFEEFB0A" Visibility="Visible" StrokeThickness="3" Stretch="Fill"/>
         <Label Content="A" HorizontalAlignment="Left" Margin="696,597,0,0" VerticalAlignment="Top" Foreground="#DDFFFFFF" FontWeight="Normal" FontSize="22" Background="Transparent" FontStyle="Normal" Height="32" Width="22"/>
+        <Machines:STR_Washing_reactor_A HorizontalAlignment="Left" Margin="626,55,0,0" VerticalAlignment="Top" Height="230" Width="121"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="642,28,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="460-04-MA1"/>
+        <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" Margin="511,55,0,0" VerticalAlignment="Top" Height="230" Width="121"/>
+        <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" Margin="398,55,0,0" VerticalAlignment="Top" Height="230" Width="117"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="412,28,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="460-02-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="526,28,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="460-03-MA1"/>
     </Grid>
 </UserControl>
