Added EXT Interface Signals for FC Testing

--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -355,5 +355,33 @@
             Margin="1308,183,0,0" 
             VerticalAlignment="Top" 
             ComponentName="471-21-CV3" RenderTransformOrigin="0.447,1.793"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="618,613,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="022-71-PC1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="727,613,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="022-71-ECS1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="620,677,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="170-71-PC1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="727,678,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="320-71-ECS1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="620,736,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="450-71-PC1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="836,618,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="474-71-ECS2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="836,679,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="474-71-ECS3"/>
     </Grid>
 </UserControl>
